updated the content of the main page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Session 02</title>
+    <title>My Awesome Webpage</title>
   </head>
   <body>
-    Session 02 Placeholder
+    A lot more cool stuff coming soon!
   </body>
 </html>
